--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,188 @@
 body {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 main {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 
 .widthLogo {
-    width: 100px;
+  width: 100px;
+}
+
+@media all and (min-width: 280px) and (max-width: 767px) {
+    .buttonAlign {
+        margin-top: 50px;
+        padding-top: 50px;
+    }
+}
+
+@media all and (min-width: 768px) and (max-width: 991px) {
+    .buttonAlign {
+        margin-top: 100px;
+        padding-top: 100px;
+    }
+
+    .btnColor:hover {
+        background-color: red;
+    }
+
+    .wobble-hor-bottom:hover {
+        -webkit-animation: wobble-hor-bottom 0.8s both;
+        animation: wobble-hor-bottom 0.8s both;
+      }
+    
+      @-webkit-keyframes wobble-hor-bottom {
+        0%,
+        100% {
+          -webkit-transform: translateX(0%);
+          transform: translateX(0%);
+          -webkit-transform-origin: 50% 50%;
+          transform-origin: 50% 50%;
+        }
+    
+        15% {
+          -webkit-transform: translateX(-30px) rotate(-6deg);
+          transform: translateX(-30px) rotate(-6deg);
+        }
+    
+        30% {
+          -webkit-transform: translateX(15px) rotate(6deg);
+          transform: translateX(15px) rotate(6deg);
+        }
+    
+        45% {
+          -webkit-transform: translateX(-15px) rotate(-3.6deg);
+          transform: translateX(-15px) rotate(-3.6deg);
+        }
+    
+        60% {
+          -webkit-transform: translateX(9px) rotate(2.4deg);
+          transform: translateX(9px) rotate(2.4deg);
+        }
+    
+        75% {
+          -webkit-transform: translateX(-6px) rotate(-1.2deg);
+          transform: translateX(-6px) rotate(-1.2deg);
+        }
+      }
+    
+      @keyframes wobble-hor-bottom {
+        0%,
+        100% {
+          -webkit-transform: translateX(0%);
+          transform: translateX(0%);
+          -webkit-transform-origin: 50% 50%;
+          transform-origin: 50% 50%;
+        }
+    
+        15% {
+          -webkit-transform: translateX(-30px) rotate(-6deg);
+          transform: translateX(-30px) rotate(-6deg);
+        }
+    
+        30% {
+          -webkit-transform: translateX(15px) rotate(6deg);
+          transform: translateX(15px) rotate(6deg);
+        }
+    
+        45% {
+          -webkit-transform: translateX(-15px) rotate(-3.6deg);
+          transform: translateX(-15px) rotate(-3.6deg);
+        }
+    
+        60% {
+          -webkit-transform: translateX(9px) rotate(2.4deg);
+          transform: translateX(9px) rotate(2.4deg);
+        }
+    
+        75% {
+          -webkit-transform: translateX(-6px) rotate(-1.2deg);
+          transform: translateX(-6px) rotate(-1.2deg);
+        }
+      }
+}
+
+@media screen and (min-width: 992px) {
+    .buttonAlign {
+        margin-top: 100px;
+        padding-top: 100px;
+    }
+
+    .wobble-hor-bottom:hover {
+        -webkit-animation: wobble-hor-bottom 0.8s both;
+        animation: wobble-hor-bottom 0.8s both;
+      }
+    
+      @-webkit-keyframes wobble-hor-bottom {
+        0%,
+        100% {
+          -webkit-transform: translateX(0%);
+          transform: translateX(0%);
+          -webkit-transform-origin: 50% 50%;
+          transform-origin: 50% 50%;
+        }
+    
+        15% {
+          -webkit-transform: translateX(-30px) rotate(-6deg);
+          transform: translateX(-30px) rotate(-6deg);
+        }
+    
+        30% {
+          -webkit-transform: translateX(15px) rotate(6deg);
+          transform: translateX(15px) rotate(6deg);
+        }
+    
+        45% {
+          -webkit-transform: translateX(-15px) rotate(-3.6deg);
+          transform: translateX(-15px) rotate(-3.6deg);
+        }
+    
+        60% {
+          -webkit-transform: translateX(9px) rotate(2.4deg);
+          transform: translateX(9px) rotate(2.4deg);
+        }
+    
+        75% {
+          -webkit-transform: translateX(-6px) rotate(-1.2deg);
+          transform: translateX(-6px) rotate(-1.2deg);
+        }
+      }
+    
+      @keyframes wobble-hor-bottom {
+        0%,
+        100% {
+          -webkit-transform: translateX(0%);
+          transform: translateX(0%);
+          -webkit-transform-origin: 50% 50%;
+          transform-origin: 50% 50%;
+        }
+    
+        15% {
+          -webkit-transform: translateX(-30px) rotate(-6deg);
+          transform: translateX(-30px) rotate(-6deg);
+        }
+    
+        30% {
+          -webkit-transform: translateX(15px) rotate(6deg);
+          transform: translateX(15px) rotate(6deg);
+        }
+    
+        45% {
+          -webkit-transform: translateX(-15px) rotate(-3.6deg);
+          transform: translateX(-15px) rotate(-3.6deg);
+        }
+    
+        60% {
+          -webkit-transform: translateX(9px) rotate(2.4deg);
+          transform: translateX(9px) rotate(2.4deg);
+        }
+    
+        75% {
+          -webkit-transform: translateX(-6px) rotate(-1.2deg);
+          transform: translateX(-6px) rotate(-1.2deg);
+        }
+      }
 }
